--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          dnf install -y ccache which
+          dnf install -y cmake ccache which
 
       - name: Prepare ccache timestamp
         id: ccache_cache_timestamp
