--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,6 +53,9 @@ jobs:
       - name: Build dnf5
         run: export PATH=/usr/lib64/ccache:/usr/lib/ccache:$PATH; cmake --build build
 
+      - name: What's here
+        run: ls -la; ls -la ~
+
       - name: Display ccache statistics
         run: ccache -s
 
